--- a/slides/week-01.org
+++ b/slides/week-01.org
@@ -19,6 +19,7 @@ I'm James.
 
 Blog: https://codingindex.xyz
 GitHub: https://github.com/jameshi16
+LinkedIn: https://www.linkedin.com/in/james-lim-b23571174/
 
 Fun fact about me: I have no social media
 
