Fix Fibonacci generator

--- a/slides/week-07.org
+++ b/slides/week-07.org
@@ -13,6 +13,7 @@ A very common example is to compute the n-th factorial:
 
 #+BEGIN_SRC haskell
   factorial :: Int -> Int -> Int
+  factorial 0 = 1
   factorial 1 = 1
   factorial x = x * factorial x - 1
 #+END_SRC
