--- a/projects/week-14-solns/solutions.ipynb
+++ b/projects/week-14-solns/solutions.ipynb
@@ -491,6 +491,191 @@
    "source": [
     "bitonic_search(1, [2, 4, 6, 8, 10, 12, 11, 9, 7, 5, 3])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "824423c8-1a71-43f2-8c23-ba723d167d29",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# Coin Change variant\n",
+    "\n",
+    "Given an array of integer numbers that represent the values of each coin, and given a target amount, determine the minimum number of coins needed to create this amount. At first, try to solve this problem with regular coins (i.e., 1,5,10,20,50), then try with different irregular coin values (e.g., 1,7,12, 38).\n",
+    "\n",
+    "Example 1\n",
+    "Given coin values (1, 2, 5,10,20,50), with \n",
+    "Target amount = 7; solution = 2 coins (5,2)\n",
+    "Target amount = 150; solution = 3 coins (50,50,50)\n",
+    "Target amount = 28; solution = 4 coins (20,5,2,1)\n",
+    " \n",
+    "Example 2\n",
+    "Given coin values (1,4,6), with:\n",
+    "Target amount = 7; solution = 2 coins (6,1)\n",
+    "Target amount = 9; solution = 3 coins (4,4,1)\n",
+    " \n",
+    "Only the number of coins is required, the coins used are not important for this exercise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "98a1bc69-0c1a-4aa7-bf59-d9dfc1b7ea15",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def dumb_method(target, coins):\n",
+    "    if target == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    return min((dumb_method(target - c, coins) for c in coins if c <= target\n",
+    "                )) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "be3eee8d-4181-4719-bd84-db1d643ad1df",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dumb_method(7, [1, 2, 5, 10, 20, 50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8361283c-1353-47af-a520-d2d97a569144",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dumb_method(28, [1, 2, 5, 10, 20, 50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c441615e-2439-46a7-bccd-433c1df2aa0b",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dumb_method(7, [1, 4, 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d005ac8a-4b01-4e7d-9f1d-dfc2745974c7",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dumb_method(9, [1, 4, 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2af739d9-cbfc-4264-a28f-2fd27031c209",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def smarter_method(target, coins):\n",
+    "    table = [[1 for _ in range(len(coins))] for _ in range(target + 1)]\n",
+    "    table[0] = [0] * len(coins)\n",
+    "\n",
+    "    for i in range(target + 1):\n",
+    "        table[i][0] = i\n",
+    "\n",
+    "    for partial in range(2, target + 1):\n",
+    "        for c_idx in range(1, len(coins)):\n",
+    "            c = coins[c_idx]\n",
+    "            diff = partial - c\n",
+    "            if diff >= 0:\n",
+    "                table[partial][c_idx] = min(table[partial][c_idx - 1], table[diff][c_idx] + 1)\n",
+    "            else:\n",
+    "                table[partial][c_idx] = table[partial][c_idx - 1]\n",
+    "\n",
+    "    return table[target][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "55471bf9-edd9-4144-80be-8cecd7edd32d",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smarter_method(150, [1, 2, 5, 10, 20, 50])"
+   ]
   }
  ],
  "metadata": {
@@ -511,7 +696,7 @@
    },
    "name": "python3"
   },
-  "name": "Untitled.ipynb"
+  "name": "solutions.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 5
